# ghidra-frida

./: README.md  build.gradle  certification.manifest
data/debugger-launchers/: local-frida.ps1  local-frida.sh
data/support/: local-frida.py
src/main/py/: pyproject.toml
src/main/py/ghidrafrida/: schema.xml
src/main/py/src/ghidrafrida/: commands.py  methods.py  util.py
